# Election_System

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/vms/: mod.rs
src/vote/: axs.rs  mod.rs  parties.rs  vote.rs
