[package]
name = "electionapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockify = { git = "https://github.com/nisaacdz/blockify" }
image = "0.24.5"
serde = "1.0.152"
bincode = "1.3.3"
rand = "0.8.5"
serde_json = "1.0.93"
